--- a/idsd-year2.html
+++ b/idsd-year2.html
@@ -25,6 +25,7 @@
                     <li><a href="gii.html">GII</a></li>
                     <li><a href="gt.html">GT</a></li>
                     <li><a href="gec.html">GEC</a></li>
+                    <li><a href="ltic.html">LTIC</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
             </nav>
@@ -190,7 +191,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 ENET'Com. All rights reserved.</p>
+            <p>&copy; 2025 ENET'Docs. All rights reserved.</p>
 
         </div>
     </footer>
