--- a/idsd-year3.html
+++ b/idsd-year3.html
@@ -25,6 +25,7 @@
                     <li><a href="gii.html">GII</a></li>
                     <li><a href="gt.html">GT</a></li>
                     <li><a href="gec.html">GEC</a></li>
+                    <li><a href="ltic.html">LTIC</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
             </nav>
@@ -124,72 +125,14 @@
                 </div>
                 
                 <!-- Second Semester -->
-                <h4 class="semester-title">Semester 2</h4>
-                <div class="course-list">
-                    <!-- Final Year Project -->
-                    <div class="course-card">
-                        <h4>Final Year Project</h4>
-                        <div class="document-list">
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="https://drive.google.com/drive/u/0/folders/1wpv5j8nH6OAxRue3VfS9xJ54JMAtWuad" target="_blank">Project Guidelines</a>
-                            </div>
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="https://drive.google.com/drive/u/0/folders/1wpv5j8nH6OAxRue3VfS9xJ54JMAtWuad" target="_blank">Research Methodology</a>
-                            </div>
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="https://drive.google.com/drive/u/0/folders/1wpv5j8nH6OAxRue3VfS9xJ54JMAtWuad" target="_blank">Thesis Writing</a>
-                            </div>
-                        </div>
-                    </div>
 
-                    <!-- Industry Internship -->
-                    <div class="course-card">
-                        <h4>Industry Internship</h4>
-                        <div class="document-list">
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="https://drive.google.com/drive/u/0/folders/1wpv5j8nH6OAxRue3VfS9xJ54JMAtWuad" target="_blank">Internship Guidelines</a>
-                            </div>
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="https://drive.google.com/drive/u/0/folders/1wpv5j8nH6OAxRue3VfS9xJ54JMAtWuad" target="_blank">Report Writing</a>
-                            </div>
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="https://drive.google.com/drive/u/0/folders/1wpv5j8nH6OAxRue3VfS9xJ54JMAtWuad" target="_blank">Presentation Skills</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Professional Ethics -->
-                    <div class="course-card">
-                        <h4>Professional Ethics</h4>
-                        <div class="document-list">
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="https://drive.google.com/drive/u/0/folders/1wpv5j8nH6OAxRue3VfS9xJ54JMAtWuad" target="_blank">Ethics in Data Science</a>
-                            </div>
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="https://drive.google.com/drive/u/0/folders/1wpv5j8nH6OAxRue3VfS9xJ54JMAtWuad" target="_blank">Privacy and Security</a>
-                            </div>
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="https://drive.google.com/drive/u/0/folders/1wpv5j8nH6OAxRue3VfS9xJ54JMAtWuad" target="_blank">Professional Responsibility</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 ENET'Com. All rights reserved.</p>
+            <p>&copy; 2025 ENET'Docs. All rights reserved.</p>
         </div>
     </footer>
 
