--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                     <li><a href="gii.html">GII</a></li>
                     <li><a href="gt.html">GT</a></li>
                     <li><a href="gec.html">GEC</a></li>
+                    <li><a href="ltic.html">LTIC</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
             </nav>
@@ -99,6 +100,11 @@
                     <p>Engineering of Electronic Communication Systems</p>
                     <a href="gec.html" class="btn">Browse Documents</a>
                 </div>
+                <div class="branch">
+                    <h3>LTIC</h3>
+                    <p>Science and Technologies of Information and Communication</p>
+                    <a href="ltic.html" class="btn">Browse Documents</a>
+                </div>
             </div>
         </div>
     </section>
@@ -107,7 +113,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-info">
-                    <p>&copy; 2025 ENET'Com. All rights reserved.</p>
+                    <p>&copy; 2025 ENET'docs. All rights reserved.</p>
                 </div>
 
             </div>
