--- a/ltic-year3.html
+++ b/ltic-year3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GEC Third Year - ENET'Com Academic Archive</title>
+    <title>IDSD Third Year - ENET'Com Academic Archive</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
@@ -15,17 +15,17 @@
     <header>
         <div class="container">
             <div class="logo">
-                <a href="index.html"><img src="icons/enetdocs.png" alt="ENET'Com Docs"></a>
+                <a href="index.html"><img src="icons/enetdocs.png" alt="ENET'Com Docs" ></a>
                 <p>École Nationale d'Électronique et des Télécommunications de Sfax</p>
             </div>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="idsd.html">IDSD</a></li>
+                    <li><a href="idsd.html" >IDSD</a></li>
                     <li><a href="gii.html">GII</a></li>
                     <li><a href="gt.html">GT</a></li>
-                    <li><a href="gec.html" class="active">GEC</a></li>
-                    <li><a href="ltic.html">LTIC</a></li>
+                    <li><a href="gec.html">GEC</a></li>
+                    <li><a href="ltic.html" class="active">LTIC</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
             </nav>
@@ -37,24 +37,24 @@
 
     <section class="hero">
         <div class="container">
-            <h2>GEC - Third Year</h2>
-            <p>Access course materials, lecture notes, and academic resources for GEC Third Year</p>
+            <h2>LTIC - Third Year</h2>
+            <p>Access course materials, lecture notes, and academic resources for IDSD Third Year</p>
             
         </div>
     </section>
 
     <section class="document-section">
         <div class="container">
-            <h2>GEC Third Year Academic Documents</h2>
+            <h2>LTIC Third Year Academic Documents</h2>
 
             <div class="info-box">
                 <p><i class="fas fa-info-circle"></i> All documents are hosted on Google Drive. Click on any subject to access its PDF resources.</p>
             </div>
 
             <div class="year-navigation">
-                <a href="gec-year1.html" class="btn">First Year</a>
-                <a href="gec-year2.html" class="btn">Second Year</a>
-                <a href="gec-year3.html" class="btn active">Third Year</a>
+                <a href="ltic-year1.html" class="btn">First Year</a>
+                <a href="ltic-year2.html" class="btn">Second Year</a>
+                <a href="ltic-year3.html" class="btn active">Third Year</a>
             </div>
 
             
@@ -66,59 +66,59 @@
                 <!-- First Semester -->
                 <h4 class="semester-title">Semester 1</h4>
                 <div class="course-list">
-                    <!-- Embedded Systems -->
+                    <!-- Artificial Intelligence -->
                     <div class="course-card">
-                        <h4>Embedded Systems</h4>
+                        <h4>Artificial Intelligence</h4>
                         <div class="document-list">
                             <div class="document-item">
                                 <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gec/2022/microcontrollers.pdf" target="_blank">Microcontrollers</a>
+                                <a href="https://drive.google.com/drive/u/0/folders/1wpv5j8nH6OAxRue3VfS9xJ54JMAtWuad" target="_blank">Foundations of AI</a>
                             </div>
                             <div class="document-item">
                                 <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gec/2022/real_time_systems.pdf" target="_blank">Real-Time Systems</a>
+                                <a href="https://drive.google.com/drive/u/0/folders/1wpv5j8nH6OAxRue3VfS9xJ54JMAtWuad" target="_blank">Expert Systems</a>
                             </div>
                             <div class="document-item">
                                 <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gec/2022/iot_applications.pdf" target="_blank">IoT Applications</a>
+                                <a href="https://drive.google.com/drive/u/0/folders/1wpv5j8nH6OAxRue3VfS9xJ54JMAtWuad" target="_blank">Natural Language Processing</a>
                             </div>
                         </div>
                     </div>
 
-                    <!-- RF and Microwave Engineering -->
+                    <!-- Business Intelligence -->
                     <div class="course-card">
-                        <h4>RF and Microwave Engineering</h4>
+                        <h4>Business Intelligence</h4>
                         <div class="document-list">
                             <div class="document-item">
                                 <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gec/2022/rf_circuits.pdf" target="_blank">RF Circuits</a>
+                                <a href="https://drive.google.com/drive/u/0/folders/1wpv5j8nH6OAxRue3VfS9xJ54JMAtWuad" target="_blank">BI Concepts and Tools</a>
                             </div>
                             <div class="document-item">
                                 <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gec/2022/microwave_theory.pdf" target="_blank">Microwave Theory</a>
+                                <a href="https://drive.google.com/drive/u/0/folders/1wpv5j8nH6OAxRue3VfS9xJ54JMAtWuad" target="_blank">Data Warehousing</a>
                             </div>
                             <div class="document-item">
                                 <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gec/2022/antenna_design.pdf" target="_blank">Antenna Design</a>
+                                <a href="https://drive.google.com/drive/u/0/folders/1wpv5j8nH6OAxRue3VfS9xJ54JMAtWuad" target="_blank">OLAP Systems</a>
                             </div>
                         </div>
                     </div>
 
-                    <!-- Advanced Signal Processing -->
+                    <!-- Advanced Analytics -->
                     <div class="course-card">
-                        <h4>Advanced Signal Processing</h4>
+                        <h4>Advanced Analytics</h4>
                         <div class="document-list">
                             <div class="document-item">
                                 <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gec/2022/digital_signal_processing.pdf" target="_blank">Digital Signal Processing</a>
+                                <a href="https://drive.google.com/drive/u/0/folders/1wpv5j8nH6OAxRue3VfS9xJ54JMAtWuad" target="_blank">Predictive Analytics</a>
                             </div>
                             <div class="document-item">
                                 <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gec/2022/adaptive_filters.pdf" target="_blank">Adaptive Filters</a>
+                                <a href="https://drive.google.com/drive/u/0/folders/1wpv5j8nH6OAxRue3VfS9xJ54JMAtWuad" target="_blank">Time Series Analysis</a>
                             </div>
                             <div class="document-item">
                                 <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gec/2022/image_processing.pdf" target="_blank">Image Processing</a>
+                                <a href="https://drive.google.com/drive/u/0/folders/1wpv5j8nH6OAxRue3VfS9xJ54JMAtWuad" target="_blank">Prescriptive Analytics</a>
                             </div>
                         </div>
                     </div>
