--- a/ltic.html
+++ b/ltic.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me - ENET'Com Academic Archive</title>
+    <title>GEC - ENET'Com Academic Archive</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
@@ -24,9 +24,9 @@
                     <li><a href="idsd.html">IDSD</a></li>
                     <li><a href="gii.html">GII</a></li>
                     <li><a href="gt.html">GT</a></li>
-                    <li><a href="gec.html" >GEC</a></li>
-                    <li><a href="ltic.html">LTIC</a></li>
-                    <li><a href="about.html" class="active">About</a></li>
+                    <li><a href="gec.html">GEC</a></li>
+                    <li><a href="ltic.html" class="active">LTIC</a></li>
+                    <li><a href="about.html">About</a></li>
                 </ul>
             </nav>
             <div class="menu-toggle">
@@ -37,29 +37,27 @@
 
     <section class="hero">
         <div class="container">
-            <h2>About Me</h2>
-            <p>Learn more about the creator of this academic archive</p>
+            <h2>LTIC - Science and Technologies of Information and Communication</h2>
+            <p>Access course materials, lecture notes, and academic resources for GEC</p>
+
         </div>
     </section>
 
     <section class="document-section">
         <div class="container">
+            <h2>LTIC Academic Documents</h2>
+
             <div class="info-box">
-                <p><i class="fas fa-user"></i> About the Creator</p>
+                <p><i class="fas fa-info-circle"></i> All documents are hosted on Google Drive. Click on any academic year to access its resources.</p>
             </div>
-            
-            <div class="about-me">
-                <div style="padding: 20px;">
-                    <p>This website was created by Adem Taktek, an engineering student at ENET'Com, with the aim of making academic documents easily accessible for all students across the branches: IDSD, GII, GT, GEC and LTIC.</p>
-                    <br>
-                    <p>If you have documents you'd like to contribute — such as PDFs, lecture notes, or old exams — you're very welcome to participate in growing this archive.</p>
-                    <br>
-                    <p><i class="fas fa-envelope"></i> Contact me via email: <a>ed4me779@proton.me</a></p>
-                    <p><i class="fab fa-facebook"></i> Or on Facebook: <a href="www.facebook.com/edam.AdouWe" target="_blank">www.facebook.com/edam.AdouWe</a></p>
-                    <br>
-                    <p>Let's support each other and make learning easier for all ENET'Com students!</p>
-                </div>
+
+            <div class="year-navigation">
+                <a href="ltic-year1.html" class="btn">First Year</a>
+                <a href="ltic-year2.html" class="btn">Second Year</a>
+                <a href="ltic-year3.html" class="btn">Third Year</a>
             </div>
+
+
         </div>
     </section>
 
