--- a/gii-year3.html
+++ b/gii-year3.html
@@ -25,6 +25,7 @@
                     <li><a href="gii.html" class="active">GII</a></li>
                     <li><a href="gt.html">GT</a></li>
                     <li><a href="gec.html">GEC</a></li>
+                    <li><a href="ltic.html">LTIC</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
             </nav>
@@ -47,7 +48,7 @@
             <h2>GII Third Year Academic Documents</h2>
 
             <div class="info-box">
-                <p><i class="fas fa-info-circle"></i> All documents are hosted on our servers. Click on any subject to access its PDF resources.</p>
+                <p><i class="fas fa-info-circle"></i> All documents are hosted on Google Drive. Click on any subject to access its PDF resources.</p>
             </div>
 
             <div class="year-navigation">
@@ -124,72 +125,14 @@
                 </div>
                 
                 <!-- Second Semester -->
-                <h4 class="semester-title">Semester 2</h4>
-                <div class="course-list">
-                    <!-- Final Year Project -->
-                    <div class="course-card">
-                        <h4>Final Year Project</h4>
-                        <div class="document-list">
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gii/2022/project_guidelines.pdf" target="_blank">Project Guidelines</a>
-                            </div>
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gii/2022/research_methodology.pdf" target="_blank">Research Methodology</a>
-                            </div>
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gii/2022/technical_writing.pdf" target="_blank">Technical Writing</a>
-                            </div>
-                        </div>
-                    </div>
 
-                    <!-- Industry Internship -->
-                    <div class="course-card">
-                        <h4>Industry Internship</h4>
-                        <div class="document-list">
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gii/2022/internship_guidelines.pdf" target="_blank">Internship Guidelines</a>
-                            </div>
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gii/2022/report_writing.pdf" target="_blank">Report Writing</a>
-                            </div>
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gii/2022/presentation_skills.pdf" target="_blank">Presentation Skills</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Professional Ethics -->
-                    <div class="course-card">
-                        <h4>Professional Ethics</h4>
-                        <div class="document-list">
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gii/2022/engineering_ethics.pdf" target="_blank">Engineering Ethics</a>
-                            </div>
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gii/2022/professional_responsibility.pdf" target="_blank">Professional Responsibility</a>
-                            </div>
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gii/2022/intellectual_property.pdf" target="_blank">Intellectual Property</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 ENET'Com. All rights reserved.</p>
+            <p>&copy; 2025 ENET'Docs. All rights reserved.</p>
         </div>
     </footer>
 
