--- a/gii.html
+++ b/gii.html
@@ -25,6 +25,7 @@
                     <li><a href="gii.html" class="active">GII</a></li>
                     <li><a href="gt.html">GT</a></li>
                     <li><a href="gec.html">GEC</a></li>
+                    <li><a href="ltic.html">LTIC</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
             </nav>
@@ -47,7 +48,7 @@
             <h2>GII Academic Documents</h2>
 
             <div class="info-box">
-                <p><i class="fas fa-info-circle"></i> All documents are hosted on our servers. Click on any academic year to access its resources.</p>
+                <p><i class="fas fa-info-circle"></i> All documents are hosted on Google Drive. Click on any academic year to access its resources.</p>
             </div>
 
             <div class="year-navigation">
@@ -64,7 +65,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-info">
-                    <p>&copy; 2025 ENET'Com. All rights reserved.</p>
+                    <p>&copy; 2025 ENET'Docs. All rights reserved.</p>
                 </div>
 
             </div>
