--- a/gt.html
+++ b/gt.html
@@ -25,6 +25,7 @@
                     <li><a href="gii.html">GII</a></li>
                     <li><a href="gt.html" class="active">GT</a></li>
                     <li><a href="gec.html">GEC</a></li>
+                    <li><a href="ltic.html">LTIC</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
             </nav>
@@ -47,7 +48,7 @@
             <h2>GT Academic Documents</h2>
 
             <div class="info-box">
-                <p><i class="fas fa-info-circle"></i> All documents are hosted on our servers. Click on any academic year to access its resources.</p>
+                <p><i class="fas fa-info-circle"></i> All documents are hosted on Google Drive. Click on any academic year to access its resources.</p>
             </div>
 
             <div class="year-navigation">
@@ -62,7 +63,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 ENET'Com. All rights reserved.</p>
+            <p>&copy; 2025 ENET'Docs. All rights reserved.</p>
         </div>
     </footer>
 
