--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     </style>
 </head>
 <body>
+
     <!-- Loading Screen -->
     <div id="loading-screen">
         <img src="icons/enetdocs.png" alt="ENET'Com Docs">
@@ -53,19 +54,24 @@
                 <a href="index.html"><img src="icons/enetdocs.png" alt="ENET'Com Docs" ></a>
                 <p>École Nationale d'Électronique et des Télécommunications de Sfax</p>
             </div>
-            <nav>
-                <ul>
-                    <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="idsd.html">IDSD</a></li>
-                    <li><a href="gii.html">GII</a></li>
-                    <li><a href="gt.html">GT</a></li>
-                    <li><a href="gec.html">GEC</a></li>
-                    <li><a href="ltic.html">LTIC</a></li>
-                    <li><a href="about.html">About</a></li>
-                </ul>
-            </nav>
-            <div class="menu-toggle">
-                <i class="fas fa-bars"></i>
+            <div class="navbar-container">
+                <nav id="navbar">
+                    <a href="index.html" class="active">Home</a>
+                    <a href="idsd.html">IDSD</a>
+                    <a href="gii.html">GII</a>
+                    <a href="gt.html">GT</a>
+                    <a href="gec.html">GEC</a>
+                    <a href="ltic.html">LTIC</a>
+                    <a href="about.html">About</a>
+                </nav>
+                <div class="theme-toggle">
+                    <button id="theme-toggle-btn" aria-label="Toggle dark/light mode">
+                        <i class="fas fa-moon"></i>
+                    </button>
+                </div>
+                <div class="menu-toggle">
+                    <i class="fas fa-bars"></i>
+                </div>
             </div>
         </div>
     </header>
@@ -77,6 +83,7 @@
         </div>
     </section>
 
+    <canvas id="galaxy"></canvas>
     <section class="programs">
         <div class="container">
             <div class="branches">
@@ -109,13 +116,10 @@
         </div>
     </section>
 
-    <footer>
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-info">
-                    <p>&copy; 2025 ENET'docs. All rights reserved.</p>
-                </div>
-
+    <footer class="blurry-footer">
+        <div class="content">
+            <div class="footer-info">
+                <p>&copy; 2025 ENET'docs. All rights reserved.</p>
             </div>
         </div>
     </footer>
