--- a/ltic.html
+++ b/ltic.html
@@ -47,6 +47,7 @@
 
         </div>
     </section>
+    <canvas id="galaxy"></canvas>
 
     <section class="document-section">
         <div class="container">
