--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
     <link rel="manifest" href="icons/site.webmanifest">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <!-- Loading screen styles -->
+
     <style>
         #loading-screen {
             position: fixed;
@@ -25,20 +25,34 @@
             justify-content: center;
             align-items: center;
             z-index: 9999;
-            transition: opacity 0.5s ease-out;
+            opacity: 1;
+            transition: opacity 0.5s ease-out, background-color 0.5s ease-out;
         }
+
         #loading-screen.fade-out {
             opacity: 0;
             pointer-events: none;
         }
+
+        [data-theme="dark"] #loading-screen {
+            background-color: #121212;
+        }
+
+        [data-theme="dark"] #loading-screen img {
+            filter: brightness(0) invert(1);
+        }
+
         #loading-screen img {
             max-width: 200px;
             animation: pulse 1s infinite alternate;
         }
+
         @keyframes pulse {
             from { transform: scale(0.95); }
             to { transform: scale(1.05); }
         }
+
+
     </style>
 </head>
 <body>
@@ -126,10 +140,10 @@
 
     <script src="js/script.js"></script>
     <script>
-        // Loading screen functionality
         window.addEventListener('load', function() {
             setTimeout(function() {
-                document.getElementById('loading-screen').classList.add('fade-out');
+                const loadingScreen = document.getElementById('loading-screen');
+                loadingScreen.classList.add('fade-out');
             }, 1000);
         });
     </script>
