--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         }
 
         [data-theme="dark"] #loading-screen {
-            background-color: #121212;
+            background-color: #0f0f2a;
         }
 
         [data-theme="dark"] #loading-screen img {
