--- a/idsd-year1.html
+++ b/idsd-year1.html
@@ -40,12 +40,15 @@
         </div>
     </header>
 
+    <div class="blur-square1 fadein"></div>
+    <div class="blur-square2 fadein"></div>
     <section class="hero">
         <div class="container">
             <h2>IDSD - First Year</h2>
             <p>Access course materials, lecture notes, and academic resources for IDSD First Year</p>
         </div>
     </section>
+
     <canvas id="galaxy"></canvas>
     <section class="document-section">
         <div class="container">
