--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
             </div>
         </div>
     </header>
-
+    <div class="blur-square1 fadein"></div>
+    <div class="blur-square2 fadein"></div>
     <section class="hero">
         <div class="container">
             <h2>Welcome to ENET'Com Academic Document Archive</h2>
