--- a/ltic.html
+++ b/ltic.html
@@ -39,7 +39,8 @@
             </div>
         </div>
     </header>
-
+    <div class="blur-square1 fadein"></div>
+    <div class="blur-square2 fadein"></div>
     <section class="hero">
         <div class="container">
             <h2>LTIC - Science and Technologies of Information and Communication</h2>
