--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
                     <p>If you have documents you'd like to contribute — such as PDFs, lecture notes, or old exams — you're very welcome to participate in growing this archive.</p>
                     <br>
                     <p><i class="fas fa-envelope"></i> Contact me via email: <a>ed4me779@proton.me</a></p>
-                    <p><i class="fab fa-facebook"></i> Or on Facebook: <a href="www.facebook.com/edam.AdouWe" target="_blank">www.facebook.com/edam.AdouWe</a></p>
+                    <p><i class="fab fa-facebook"></i> Or on Facebook: <a href="https://www.facebook.com/edam.AdouWe" target="_blank">www.facebook.com/edam.AdouWe</a></p>
                     <br>
                     <p>Let's support each other and make learning easier for all ENET'Com students!</p>
                 </div>
