--- a/gt-year2.html
+++ b/gt-year2.html
@@ -67,7 +67,7 @@
 
             <!-- Second Year -->
             <div class="year-section">
-                <h3>Second Year</h3>
+                <h3>GT Second Year</h3>
                 
                 <!-- First Semester -->
                 <details>
