--- a/idsd-year1.html
+++ b/idsd-year1.html
@@ -67,7 +67,7 @@
 
             <!-- First Year -->
             <div class="year-section">
-                <h3>First Year</h3>
+                <h3>IDSD First Year</h3>
 
                 <!-- First Semester -->
                 <h4 class="semester-title">Semester 1</h4>
