--- a/index.html
+++ b/index.html
@@ -102,31 +102,41 @@
     <section class="programs">
         <div class="container">
             <div class="branches">
-                <div class="branch">
-                    <h3>IDSD</h3>
-                    <p>Data Science and Decision Engineering</p>
-                    <a href="idsd.html" class="btn">Browse Documents</a>
-                </div>
-                <div class="branch">
-                    <h3>GII</h3>
-                    <p>Industrial Computer Engineering</p>
-                    <a href="gii.html" class="btn">Browse Documents</a>
-                </div>
-                <div class="branch">
-                    <h3>GT</h3>
-                    <p>Telecommunication Engineering</p>
-                    <a href="gt.html" class="btn">Browse Documents</a>
-                </div>
-                <div class="branch">
-                    <h3>GEC</h3>
-                    <p>Engineering of Electronic Communication Systems</p>
-                    <a href="gec.html" class="btn">Browse Documents</a>
-                </div>
-                <div class="branch">
-                    <h3>LTIC</h3>
-                    <p>Science and Technologies of Information and Communication</p>
-                    <a href="ltic.html" class="btn">Browse Documents</a>
-                </div>
+                <a href="idsd.html" class="cardlink">
+                    <div class="branch">
+                        <h3>IDSD</h3>
+                        <p>Data Science and Decision Engineering</p>
+                        <i class="fas fa-caret-right"></i>
+                    </div>
+                </a>
+                <a href ="gii.html" class="cardlink">
+                    <div class="branch">
+                        <h3>GII</h3>
+                        <p>Industrial Computer Engineering</p>
+                        <i class="fas fa-caret-right"></i>
+                    </div>
+                </a>
+                <a href="gt.html" class="cardlink">
+                    <div class="branch">
+                        <h3>GT</h3>
+                        <p>Telecommunication Engineering</p>
+                        <i class="fas fa-caret-right"></i>
+                    </div>
+                </a>
+                <a href="gec.html" class="cardlink">
+                    <div class="branch">
+                        <h3>GEC</h3>
+                        <p>Engineering of Electronic Communication Systems</p>
+                        <i class="fas fa-caret-right"></i>
+                    </div>
+                </a>
+                <a href="ltic.html" class="cardlink">
+                    <div class="branch">
+                        <h3>LTIC</h3>
+                        <p>Science and Technologies of Information and Communication</p>
+                        <i class="fas fa-caret-right"></i>
+                    </div>
+                </a>
             </div>
         </div>
     </section>
