--- a/gec-year2.html
+++ b/gec-year2.html
@@ -69,7 +69,7 @@
 
             <!-- Second Year -->
             <div class="year-section">
-                <h3>Second Year</h3>
+                <h3>GEC Second Year</h3>
                 
                 <!-- First Semester -->
                 <h4 class="semester-title">Semester 1</h4>
