--- a/gii-year3.html
+++ b/gii-year3.html
@@ -67,7 +67,7 @@
 
             <!-- Third Year -->
             <div class="year-section">
-                <h3>Third Year</h3>
+                <h3>GII Third Year</h3>
                 
                 <!-- First Semester -->
                 <h4 class="semester-title">Semester 1</h4>
