--- a/idsd-year2.html
+++ b/idsd-year2.html
@@ -68,7 +68,7 @@
 
             <!-- Second Year -->
             <div class="year-section">
-                <h3>Second Year</h3>
+                <h3>IDSD Second Year</h3>
                 
                 <!-- First Semester -->
                 <h4 class="semester-title">Semester 1</h4>
