--- a/gt.html
+++ b/gt.html
@@ -61,6 +61,7 @@
                 <a href="gt-year1.html" class="btn">First Year</a>
                 <a href="gt-year2.html" class="btn">Second Year</a>
                 <a href="gt-year3.html" class="btn">Third Year</a>
+                <a href="https://enetcom.rnu.tn/userfiles/files/Plan-Etudes/GT_23-24.pdf" class="btn" target="_blank" style="background-color:var(--borderleft); color:var(--header-bg);">Study Plan</a>
             </div>
 
 
