--- a/gii-year1.html
+++ b/gii-year1.html
@@ -61,6 +61,7 @@
                 <a href="gii-year1.html" class="btn active">First Year</a>
                 <a href="gii-year2.html" class="btn">Second Year</a>
                 <a href="gii-year3.html" class="btn">Third Year</a>
+                <a href="https://enetcom.rnu.tn/userfiles/files/Plan-Etudes/GII_23-24.pdf" class="btn" target="_blank" style="background-color:var(--borderleft); color:var(--header-bg);">Study Plan</a>
             </div>
 
             
