--- a/idsd-year1.html
+++ b/idsd-year1.html
@@ -62,6 +62,7 @@
                 <a href="idsd-year1.html" class="btn active">First Year</a>
                 <a href="idsd-year2.html" class="btn">Second Year</a>
                 <a href="idsd-year3.html" class="btn">Third Year</a>
+                <a href="https://enetcom.rnu.tn/userfiles/files/Plan-Etudes/IDSD_23-24.pdf" class="btn" target="_blank" style="background-color:var(--borderleft); color:var(--header-bg);">Study Plan</a>
             </div>
 
 
