--- a/ltic-year3.html
+++ b/ltic-year3.html
@@ -61,6 +61,7 @@
                 <a href="ltic-year1.html" class="btn">First Year</a>
                 <a href="ltic-year2.html" class="btn">Second Year</a>
                 <a href="ltic-year3.html" class="btn active">Third Year</a>
+                <a href="https://enetcom.rnu.tn/userfiles/files/Plan-Etudes/LTIC_2021.pdf" class="btn" target="_blank" style="background-color:var(--borderleft); color:var(--header-bg);">Study Plan</a>
             </div>
 
             
