--- a/gec-year1.html
+++ b/gec-year1.html
@@ -26,6 +26,7 @@
                     <a href="gt.html">GT</a>
                     <a href="gec.html" class="active">GEC</a>
                     <a href="ltic.html">LTIC</a>
+                    <a href="pomodoro.html">Pomodoro</a>
                     <a href="about.html">About</a>
                 </nav>
                 <div class="theme-toggle">
