--- a/gec.html
+++ b/gec.html
@@ -26,6 +26,7 @@
                     <a href="gt.html">GT</a>
                     <a href="gec.html" class="active">GEC</a>
                     <a href="ltic.html">LTIC</a>
+                    <a href="pomodoro.html">Pomodoro</a>
                     <a href="about.html">About</a>
                 </nav>
                 <div class="theme-toggle">
@@ -63,8 +64,6 @@
                 <a href="gec-year3.html" class="btn">Third Year</a>
                 <a href="https://enetcom.rnu.tn/userfiles/files/Plan-Etudes/GEC_23-24.pdf" class="btn" target="_blank" style="background-color:var(--borderleft); color:var(--header-bg);">Study Plan</a>
             </div>
-
-
         </div>
     </section>
 
