--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                     <a href="gt.html">GT</a>
                     <a href="gec.html">GEC</a>
                     <a href="ltic.html">LTIC</a>
+                    <a href="pomodoro.html">Pomodoro</a>
                     <a href="about.html">About</a>
                 </nav>
                 <div class="theme-toggle">
