--- a/pomodoro.html
+++ b/pomodoro.html
@@ -77,6 +77,9 @@
                 width: 90%;
                 padding: 12px;
             }
+            .pomodoro-timer,.pomodoro-timer::after{
+                position: relative !important;
+            }
             #timer-display {
                 font-size: 2.5rem;
             }
