--- a/about.html
+++ b/about.html
@@ -57,12 +57,14 @@
 
             <div class="about-me">
                 <div style="padding: 20px;">
-                    <p>This website was created by Adem Taktek, an engineering student at ENET'Com, with the aim of making academic documents easily accessible for all students across the branches: IDSD, GII, GT, GEC and LTIC.</p>
+                    <p>This website was created by Adem Taktek and Adam Ghorbel, Two engineering students at ENET'Com, with the aim of making academic documents easily accessible for all students across the branches: IDSD, GII, GT, GEC and LTIC.</p>
                     <br>
                     <p>If you have documents you'd like to contribute — such as PDFs, lecture notes, or old exams — you're very welcome to participate in growing this archive.</p>
                     <br>
-                    <p><i class="fas fa-envelope"></i> Contact me via email: <a>ed4me779@proton.me</a></p>
-                    <p><i class="fab fa-facebook"></i> Or on Facebook: <a href="https://www.facebook.com/edam.AdouWe" target="_blank">www.facebook.com/edam.AdouWe</a></p>
+                    <p><i class="fas fa-envelope"></i> Contact Adem Taktek: <a href="mailto:ed4me779@proton.me">ed4me779@proton.me</a></p>
+                    <p><i class="fas fa-envelope"></i> Contact  Ghorbel: <a href="mailto:adam.ghorbel@example.com">Adam.ghorbel510@gmail.com</a></p>
+                    <p><i class="fab fa-facebook"></i> Adem Taktek on Facebook: <a href="https://www.facebook.com/edam.AdouWe" target="_blank">facebook.com/edam.AdouWe</a></p>
+                    <p><i class="fab fa-facebook"></i> Adam Ghorbel on Facebook: <a href="https://www.facebook.com/adam.ghorbel.510#" target="_blank">www.facebook.com/adam.ghorbel.510#</a></p>
                     <br>
                     <p>Let's support each other and make learning easier for all ENET'Com students!</p>
                 </div>
