--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
                     <p>If you have documents you'd like to contribute — such as PDFs, lecture notes, or old exams — you're very welcome to participate in growing this archive.</p>
                     <br>
                     <p><i class="fas fa-envelope"></i> Contact Adem Taktek: <a href="mailto:ed4me779@proton.me">ed4me779@proton.me</a></p>
-                    <p><i class="fas fa-envelope"></i> Contact  Ghorbel: <a href="mailto:adam.ghorbel@example.com">Adam.ghorbel510@gmail.com</a></p>
+                    <p><i class="fas fa-envelope"></i> Contact Adam Ghorbel: <a href="mailto:adam.ghorbel@example.com">Adam.ghorbel510@gmail.com</a></p>
                     <p><i class="fab fa-facebook"></i> Adem Taktek on Facebook: <a href="https://www.facebook.com/edam.AdouWe" target="_blank">facebook.com/edam.AdouWe</a></p>
                     <p><i class="fab fa-facebook"></i> Adam Ghorbel on Facebook: <a href="https://www.facebook.com/adam.ghorbel.510#" target="_blank">www.facebook.com/adam.ghorbel.510#</a></p>
                     <br>
