--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me - ENET'Com Academic Archive</title>
+    <title>About Us</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
@@ -44,15 +44,15 @@
     <div class="blur-square2 fadein"></div>
     <section class="hero">
         <div class="container">
-            <h2>About Me</h2>
-            <p>Learn more about the creator of this academic archive</p>
+            <h2>About Us</h2>
+            <p>Learn more about the creators of this academic archive</p>
         </div>
     </section>
     <canvas id="galaxy"></canvas>
     <section class="document-section">
         <div class="container">
             <div class="info-box">
-                <p><i class="fas fa-user"></i> About the Creator</p>
+                <p><i class="fas fa-user"></i> About the Creators</p>
             </div>
 
             <div class="about-me">
