--- a/ltic.html
+++ b/ltic.html
@@ -45,7 +45,7 @@
     <section class="hero">
         <div class="container">
             <h2>LTIC - Science and Technologies of Information and Communication</h2>
-            <p>Access course materials, lecture notes, and academic resources for GEC</p>
+            <p>Access course materials, lecture notes, and academic resources for LTIC</p>
 
         </div>
     </section>
