--- a/ltic-year3.html
+++ b/ltic-year3.html
@@ -45,7 +45,7 @@
     <section class="hero">
         <div class="container">
             <h2>LTIC - Third Year</h2>
-            <p>Access course materials, lecture notes, and academic resources for IDSD Third Year</p>
+            <p>Access course materials, lecture notes, and academic resources for LTIC Third Year</p>
             
         </div>
     </section>
