--- a/ltic-year2.html
+++ b/ltic-year2.html
@@ -45,7 +45,7 @@
     <section class="hero">
         <div class="container">
             <h2>LTIC - Second Year</h2>
-            <p>Access course materials, lecture notes, and academic resources for IDSD Second Year</p>
+            <p>Access course materials, lecture notes, and academic resources for LTIC Second Year</p>
             
         </div>
     </section>
