--- a/ltic-year1.html
+++ b/ltic-year1.html
@@ -45,7 +45,7 @@
     <section class="hero">
         <div class="container">
             <h2>LTIC - First Year</h2>
-            <p>Access course materials, lecture notes, and academic resources for IDSD First Year</p>
+            <p>Access course materials, lecture notes, and academic resources for LTIC First Year</p>
         </div>
     </section>
     <canvas id="galaxy"></canvas>
